# stereo_gs

./: CMakeLists.txt  README.md
Forms/: main_window.ui
config/: cam_config.json
include/: camera_config.hpp  disparity.hpp  main_window.hpp  ui_main_window.hpp
src/: camera_config.cpp  disparity.cpp  main_window.cpp  stereo_camera_display.cpp
